<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AppointmentActivity"
    android:background="@color/colorWhite"
    tools:showIn="@layout/app_bar_appointment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
    <Button
        android:id="@+id/healthbtn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="Health"
        android:textSize="16dp"
        android:gravity="center|bottom"/>
    <Button
        android:id="@+id/consultbtn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="Consult"
        android:textSize="16dp"
        android:gravity="center|bottom"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="60dp"
    android:paddingHorizontal="30dp"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/appointfirstlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

    <TextView
        android:id="@+id/appointfirsttv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/sl"
        android:textColor="@color/colorGrey"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appointsectv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sl"
        android:text="@string/appoint1"
        android:textColor="@color/colorGrey"
        android:textSize="20dp" />

    <Button
        android:id="@+id/appointfirstbtn"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/mybutton"
        android:paddingHorizontal="30dp"
        android:text="@string/appoint2"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/appointsecbtn"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginVertical="5dp"
        android:background="@drawable/mybutton"
        android:paddingHorizontal="50dp"
        android:text="@string/appoint3"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/appointthirdbtn"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginVertical="5dp"
        android:background="@drawable/mybutton"
        android:paddingHorizontal="30dp"
        android:text="@string/appoint4"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/appointfourthbtn"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/mybutton"
        android:paddingHorizontal="60dp"
        android:text="@string/appoint5"
        android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/appointseclayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/editMobileNo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="Search"
            android:drawableRight="@drawable/ic_search_black_24dp"
            android:gravity="center" />

        <ListView
            android:id="@+id/appointgetlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

</LinearLayout>
</LinearLayout>


</RelativeLayout>